fix: cleanup listeners, focus rules