@@ -22,15 +22,12 @@ import org.phoebus.ui.javafx.Styles;
 
 import java.text.MessageFormat;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
+import java.util.stream.Stream;
 
 import javafx.scene.input.KeyEvent;
 import javafx.scene.input.MouseButton;
-
-import javafx.application.Platform;
-import javafx.beans.value.ChangeListener;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.geometry.Bounds;
@@ -38,7 +35,6 @@ import javafx.scene.Cursor;
 import javafx.scene.control.ListView;
 import javafx.scene.control.ListCell;
 import javafx.scene.control.TextField;
-import javafx.scene.input.MouseEvent;
 import javafx.scene.text.Font;
 import javafx.stage.Popup;
 import org.phoebus.ui.vtype.FormatOption;
@@ -49,125 +45,22 @@ import org.phoebus.ui.vtype.FormatOptionHandler;
  */
 @SuppressWarnings("nls")
 public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextField, AutoCompleteWidget> {
-    private volatile boolean active = false;
-    private volatile boolean enabled = false;
-    private volatile boolean updating_suggestions = false;
-
     private final DirtyFlag dirty_style = new DirtyFlag();
     private final DirtyFlag dirty_content = new DirtyFlag();
     private final DirtyFlag dirty_enable = new DirtyFlag();
-    private final UntypedWidgetPropertyListener contentChangedListener = this::contentChanged;
-    private final UntypedWidgetPropertyListener enableChangedListener = this::enableChanged;
-    private final UntypedWidgetPropertyListener styleChangedListener = this::styleChanged;
+    private final UntypedWidgetPropertyListener listener = this::propertyChanged;
 
-    private volatile List<String> items = Collections.emptyList();
-    private volatile String currentValue = "";
-
+    private List<String> items = List.of();
+    private String currentValue = "";
     private Popup suggestionsPopup;
     private ListView<String> suggestionsListView;
-    private ObservableList<String> suggestionsData;
+    private ObservableList<String> suggestions;
+    private boolean isNavigatingSuggestions = false;
 
-    private static class SuggestionCell extends ListCell<String> {
-        @Override
-        protected void updateItem(String item, boolean empty) {
-            super.updateItem(item, empty);
-
-            if (empty || item == null) {
-                setText(null);
-                setStyle("");
-            } else {
-                setText(item);
-                String baseStyle = "-fx-padding: 8 12 8 12; " +
-                        "-fx-alignment: center-left; " +
-                        "-fx-border-color: transparent; ";
-                if (isSelected()) {
-                    setStyle(baseStyle + "-fx-background-color: #3498db; " +
-                            "-fx-text-fill: white;");
-                } else {
-                    setStyle(baseStyle +
-                            "-fx-background-color: transparent; " +
-                            "-fx-text-fill: black;");
-                }
-            }
-        }
-
-        @Override
-        public void updateSelected(boolean selected) {
-            super.updateSelected(selected);
-            updateItem(getItem(), isEmpty());
-        }
-    }
-
-    private void updateSuggestionsDisplay(List<String> suggestions) {
-        updating_suggestions = true;
-
-        try {
-            if (suggestions.isEmpty()) {
-                suggestionsPopup.hide();
-                return;
-            }
-
-            suggestionsData.setAll(suggestions);
-
-            if (!suggestionsPopup.isShowing()) {
-                showPopup(suggestions.size());
-            } else {
-                updatePopupSize(suggestions.size());
-            }
-
-            suggestionsListView.getSelectionModel().clearSelection();
-            suggestionsListView.scrollTo(0);
-
-        } finally {
-            updating_suggestions = false;
-        }
-    }
-
-    private void showPopup(int itemCount) {
-        Bounds bounds = jfx_node.localToScreen(jfx_node.getBoundsInLocal());
-
-        updatePopupSize(itemCount);
-
-        suggestionsPopup.show(jfx_node, bounds.getMinX(), bounds.getMaxY());
-    }
-
-    private void updatePopupSize(int itemCount) {
-        double textFieldWidth = jfx_node.getWidth();
-        suggestionsListView.setPrefWidth(textFieldWidth);
-        suggestionsListView.setMaxWidth(textFieldWidth);
-        suggestionsListView.setMinWidth(textFieldWidth);
-
-        final int maxVisibleSuggestions = model_widget.propMaxSuggestions().getValue();
-        double itemHeight = 35.0;
-        int visibleItems = Math.min(itemCount, maxVisibleSuggestions);
-        double maxHeight = Math.min(visibleItems * itemHeight, 300);
-
-        suggestionsListView.setPrefHeight(maxHeight);
-        suggestionsListView.setMaxHeight(maxHeight);
-    }
-
-    private void showAllSuggestions() {
-        if (!enabled || items.isEmpty()) {
-            return;
-        }
-
-        String currentText = jfx_node.getText();
-        if (currentText == null) {
-            currentText = "";
-        }
-
-        List<String> suggestions;
-        if (currentText.isEmpty() || currentText.length() < model_widget.propMinCharacters().getValue()) {
-            suggestions = items;
-        } else {
-            suggestions = model_widget.getFilteredSuggestions(currentText);
-        }
-
-        updateSuggestionsDisplay(suggestions);
-    }
+    private javafx.beans.value.ChangeListener<String> textChangeListener;
 
     /**
-     * Creates the JavaFX node (a {@link TextField}) and initializes internal popup.
+     * Creates the JavaFX node (a {@link TextField}) and initializes internal suggestionsPopup.
      *
      * @return a configured {@link TextField} ready for user input
      * @throws Exception if the node cannot be created or styled
@@ -175,64 +68,53 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
     @Override
     public TextField createJFXNode() throws Exception {
         final TextField textField = new TextField();
-
-        if (!toolkit.isEditMode()) {
-            initializePopup(textField);
-            setupTextFieldEventHandlers(textField);
-        }
-
         textField.setManaged(false);
 
-        enableChanged(null, null, null);
-        contentChanged(null, null, null);
+        if (!toolkit.isEditMode()) {
+            initPopup();
+            setupEventHandlers(textField);
+        }
 
         return textField;
     }
 
     /**
-     * Suggestion popup initialization.
-     *
-     * @param textField AutoComplete JavaFX TextField.
+     * Initializes the suggestions popup and its ListView.
+     * The popup will display a list of suggestions based on user input.
      */
-    private void initializePopup(TextField textField) {
+    private void initPopup() {
         suggestionsPopup = new Popup();
-        suggestionsPopup.setAutoHide(true);
-        suggestionsPopup.setAutoFix(true);
-        suggestionsPopup.setHideOnEscape(true);
+        suggestionsPopup.setAutoHide(false);
+        suggestionsPopup.setHideOnEscape(false);
         suggestionsPopup.setConsumeAutoHidingEvents(false);
 
-        suggestionsData = FXCollections.observableArrayList();
-        suggestionsListView = new ListView<>(suggestionsData);
+        suggestions = FXCollections.observableArrayList();
+        suggestionsListView = new ListView<>(suggestions);
+        suggestionsListView.setFocusTraversable(false);
 
-        suggestionsListView.setCellFactory(listView -> new SuggestionCell());
+        suggestionsListView.setCellFactory(lv -> new ListCell<>() {
+            @Override
+            protected void updateItem(String item, boolean empty) {
+                super.updateItem(item, empty);
+                setText(empty || item == null ? null : item);
+                setStyle(isSelected() ? "-fx-text-fill: white;" : "-fx-background-color: transparent;");
+            }
+        });
 
         suggestionsListView.setStyle(
-                "-fx-background-color: white; " +
-                        "-fx-border-color: #cccccc; " +
-                        "-fx-border-width: 1px; " +
-                        "-fx-border-radius: 3px; " +
-                        "-fx-background-radius: 3px; " +
-                        "-fx-faint-focus-color: transparent; " +
-                        "-fx-selection-bar-non-focused: #3498db;"
+            "-fx-background-color: white; -fx-border-color: #cccccc; -fx-border-width: 1px; " +
+                "-fx-border-radius: 3px; -fx-background-radius: 3px; -fx-focus-color: transparent; " +
+                "-fx-faint-focus-color: transparent; -fx-selection-bar-non-focused: #3498db;"
         );
 
-        suggestionsListView.setOnMouseClicked(event -> {
-            String selectedItem = suggestionsListView.getSelectionModel().getSelectedItem();
-            if (selectedItem != null && event.getClickCount() == 1) {
-                selectSuggestion(selectedItem);
+        suggestionsListView.setOnMouseClicked(e -> {
+            String selected = suggestionsListView.getSelectionModel().getSelectedItem();
+            if (selected != null) {
+                selectSuggestion(selected);
             }
         });
 
         suggestionsPopup.getContent().add(suggestionsListView);
-
-        textField.widthProperty().addListener((obs, oldWidth, newWidth) -> {
-            if (suggestionsPopup.isShowing()) {
-                updatePopupSize(suggestionsData.size());
-            }
-        });
-
-        suggestionsListView.setFocusTraversable(false);
-        suggestionsListView.setMouseTransparent(false);
     }
 
     /**
@@ -240,143 +122,92 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
      *
      * @param textField AutoComplete JavaFX TextField.
      */
-    private void setupTextFieldEventHandlers(TextField textField) {
-        ChangeListener<String> textChangeListener = (observable, oldValue, newValue) -> {
-            if (active || updating_suggestions) {
-                return;
-            }
-
-            updateSuggestions(newValue);
-
-            if (!model_widget.propCustom().getValue() && newValue != null && !newValue.isEmpty()) {
-                validateInput(newValue);
-            }
-        };
+    private void setupEventHandlers(TextField textField) {
+        textChangeListener = (obs, old, text) -> updateSuggestions(text);
         textField.textProperty().addListener(textChangeListener);
 
-        textField.setOnMouseClicked(event -> {
-            if (enabled && event.getButton() == MouseButton.PRIMARY) {
-                showAllSuggestions();
+        textField.setOnMouseClicked(e -> {
+            if (!textField.isDisabled() && textField.isEditable() && e.getButton() == MouseButton.PRIMARY) {
+                showSuggestions();
             }
         });
 
         textField.setOnKeyPressed(this::handleKeyPressed);
 
-        textField.setOnAction(event -> {
-            if (suggestionsPopup.isShowing()) {
+        textField.focusedProperty().addListener((obs, old, focused) -> {
+            if (focused) {
+                showSuggestions();
+            } else {
                 suggestionsPopup.hide();
-            }
-            String text = textField.getText();
-            if (text != null && !text.trim().isEmpty()) {
-                confirmValue(text);
-            }
-        });
-
-        textField.focusedProperty().addListener((obs, oldVal, newVal) -> {
-            if (newVal && enabled) {
-                Platform.runLater(this::showAllSuggestions);
-            } else if (!newVal) {
-                if (suggestionsPopup.isShowing()) {
-                    Platform.runLater(() -> suggestionsPopup.hide());
-                }
-
-                String currentText = textField.getText();
-                if (currentText != null && !currentText.equals(currentValue)) {
-                    Platform.runLater(() -> textField.setText(currentValue));
-                }
-            }
-        });
-
-        textField.addEventFilter(MouseEvent.ANY, e -> {
-            if (e.getButton() != MouseButton.NONE && !enabled) {
-                e.consume();
+                textField.textProperty().removeListener(textChangeListener);
+                textField.setText(currentValue);
+                textField.textProperty().addListener(textChangeListener);
             }
         });
     }
 
     /**
-     * Method to validate user input when
+     * Handles key presses in the TextField to navigate through suggestions.
+     * - DOWN: Selects the next suggestion.
+     * - UP: Selects the previous suggestion.
+     * - ENTER: Selects the currently highlighted suggestion.
+     * - ESCAPE: Hides the suggestions popup and resets the text field.
      *
-     * @param input User input.
-     */
-    private void validateInput(String input) {
-        if (!model_widget.propCustom().getValue()) {
-            return;
-        }
-
-        boolean isValidItem = items.stream()
-            .anyMatch(item -> {
-                if (model_widget.propCaseSensitive().getValue()) {
-                    return item.startsWith(input);
-                } else {
-                    return item.toLowerCase().startsWith(input.toLowerCase()) ||
-                        item.equalsIgnoreCase(input);
-                }
-            });
-
-        if (isValidItem || input.isEmpty()) {
-            Platform.runLater(() -> styleChanged(null, null, null));
-        }
-    }
-
-    /**
-     * Method to handle user interactions with text field.
-     *
-     * @param event Key input event.
+     * @param event KeyEvent triggered by user input.
      */
     private void handleKeyPressed(KeyEvent event) {
         switch (event.getCode()) {
-            case UP -> {
-                if (!suggestionsPopup.isShowing() || suggestionsData.isEmpty()) {
-                    return;
-                }
-
-                int currentIndex = suggestionsListView.getSelectionModel().getSelectedIndex();
-                if (currentIndex > 0) {
-                    suggestionsListView.getSelectionModel().select(currentIndex - 1);
-                    suggestionsListView.scrollTo(currentIndex - 1);
-                } else if (currentIndex == -1 && !suggestionsData.isEmpty()) {
-                    suggestionsListView.getSelectionModel().select(suggestionsData.size() - 1);
-                    suggestionsListView.scrollTo(suggestionsData.size() - 1);
-                } else if (currentIndex == 0) {
-                    suggestionsListView.getSelectionModel().select(suggestionsData.size() - 1);
-                    suggestionsListView.scrollTo(suggestionsData.size() - 1);
-                }
-                Platform.runLater(() -> suggestionsListView.refresh());
+            case DOWN -> {
+                navigateSuggestions(1);
                 event.consume();
             }
-            case DOWN -> {
-                int currentIndex = suggestionsListView.getSelectionModel().getSelectedIndex();
-                if (currentIndex < suggestionsData.size() - 1) {
-                    suggestionsListView.getSelectionModel().select(currentIndex + 1);
-                    suggestionsListView.scrollTo(currentIndex + 1);
-                } else if (currentIndex == -1 && !suggestionsData.isEmpty()) {
-                    suggestionsListView.getSelectionModel().select(0);
-                    suggestionsListView.scrollTo(0);
-                } else if (currentIndex == suggestionsData.size() - 1) {
-                    suggestionsListView.getSelectionModel().select(0);
-                    suggestionsListView.scrollTo(0);
-                }
-                Platform.runLater(() -> suggestionsListView.refresh());
+            case UP -> {
+                navigateSuggestions(-1);
                 event.consume();
             }
             case ENTER -> {
-                String selectedItem = suggestionsListView.getSelectionModel().getSelectedItem();
-                if (selectedItem != null) {
-                    selectSuggestion(selectedItem);
+                if (model_widget.propCustom().getValue() && !isNavigatingSuggestions) {
+                    String text = jfx_node.getText();
+                    if (!text.isEmpty()) {
+                        selectSuggestion(text);
+                    }
+                    event.consume();
+                    return;
                 }
+
+                String selected = suggestionsListView.getSelectionModel().getSelectedItem();
+
+                if (selected != null) {
+                    selectSuggestion(selected);
+                }
+
                 event.consume();
             }
             case ESCAPE -> {
-                TextField source = (TextField) event.getSource();
-                if (!source.getText().equals(currentValue)) {
-                    ((TextField) event.getSource()).setText(currentValue);
-                } else {
-                    suggestionsPopup.hide();
-                }
+                suggestionsPopup.hide();
+                jfx_node.textProperty().removeListener(textChangeListener);
+                jfx_node.setText(currentValue);
+                jfx_node.textProperty().addListener(textChangeListener);
+                jfx_node.getParent().requestFocus();
                 event.consume();
             }
         }
+    }
+
+    /**
+     * Navigate through the suggestions list based on the direction.
+     * If direction is positive, it moves down; if negative, it moves up.
+     *
+     * @param direction 1 for down, -1 for up.
+     */
+    private void navigateSuggestions(int direction) {
+        isNavigatingSuggestions = true;
+        int currentIndex = suggestionsListView.getSelectionModel().getSelectedIndex();
+        int newIndex = direction > 0 ?
+            (currentIndex + 1) % suggestions.size() :
+            currentIndex <= 0 ? suggestions.size() - 1 : currentIndex - 1;
+        suggestionsListView.getSelectionModel().select(newIndex);
+        suggestionsListView.scrollTo(newIndex);
     }
 
     /**
@@ -386,6 +217,7 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
      * @param inputText new text input string.
      */
     private void updateSuggestions(String inputText) {
+        isNavigatingSuggestions = false;
         if (inputText == null) {
             inputText = "";
         }
@@ -395,8 +227,76 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
             return;
         }
 
-        List<String> suggestions = model_widget.getFilteredSuggestions(inputText);
-        updateSuggestionsDisplay(suggestions);
+        showFilteredSuggestions(model_widget.getFilteredSuggestions(inputText));
+    }
+
+    /**
+     * Show suggestions based on the current text in the TextField.
+     * If the TextField is empty, show all items.
+     * If there are no items, hide the suggestions popup.
+     */
+    private void showSuggestions() {
+        if (jfx_node.isDisabled() || !jfx_node.isEditable() || items.isEmpty()) return;
+
+        String text = jfx_node.getText();
+        List<String> toShow = (text == null || text.isEmpty()) ?
+            items : model_widget.getFilteredSuggestions(text);
+
+        showFilteredSuggestions(toShow);
+    }
+
+    /**
+     * Show the filtered suggestions in the popup.
+     *
+     * @param filtered List of filtered suggestions to display.
+     */
+    private void showFilteredSuggestions(List<String> filtered) {
+        if (filtered.isEmpty()) {
+            suggestionsPopup.hide();
+            return;
+        }
+
+        suggestions.setAll(filtered);
+
+        if (!suggestionsPopup.isShowing()) {
+            showPopup(filtered.size());
+
+            if (jfx_node.isFocused()) {
+                javafx.application.Platform.runLater(() -> jfx_node.requestFocus());
+            }
+        } else {
+            updatePopupSize(filtered.size());
+        }
+    }
+
+    /**
+     * Show the suggestions popup below the text field.
+     *
+     * @param itemCount number of items to show in the popup.
+     */
+    private void showPopup(int itemCount) {
+        Bounds bounds = jfx_node.localToScreen(jfx_node.getBoundsInLocal());
+
+        updatePopupSize(itemCount);
+
+        suggestionsPopup.show(jfx_node, bounds.getMinX(), bounds.getMaxY());
+    }
+
+    /**
+     * Update the size of the suggestions popup based on the number of items.
+     *
+     * @param itemCount number of items in the suggestions list.
+     */
+    private void updatePopupSize(int itemCount) {
+        double width = jfx_node.getWidth();
+        suggestionsListView.setPrefWidth(width);
+        suggestionsListView.setMaxWidth(width);
+        suggestionsListView.setMinWidth(width);
+
+        int visibleItems = Math.min(itemCount, model_widget.propMaxSuggestions().getValue());
+        double maxHeight = Math.min(visibleItems * 23.5, 300);
+        suggestionsListView.setPrefHeight(maxHeight);
+        suggestionsListView.setMaxHeight(maxHeight);
     }
 
     /**
@@ -405,17 +305,15 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
      * @param suggestion selected suggestion.
      */
     private void selectSuggestion(String suggestion) {
-        active = true;
+        isNavigatingSuggestions = false;
+        jfx_node.textProperty().removeListener(textChangeListener);
+        jfx_node.setText(suggestion);
+        jfx_node.textProperty().addListener(textChangeListener);
 
-        try {
-            jfx_node.setText(suggestion);
-            suggestionsPopup.hide();
+        suggestionsPopup.hide();
 
-            if (model_widget.runtimePropPVWritable().getValue()) {
-                confirmValue(suggestion);
-            }
-        } finally {
-            active = false;
+        if (model_widget.runtimePropPVWritable().getValue()) {
+            confirmValue(suggestion);
         }
     }
 
@@ -433,22 +331,19 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
     @Override
     protected void registerListeners() {
         super.registerListeners();
-        model_widget.propWidth().addUntypedPropertyListener(styleChangedListener);
-        model_widget.propHeight().addUntypedPropertyListener(styleChangedListener);
-        model_widget.propForegroundColor().addUntypedPropertyListener(styleChangedListener);
-        model_widget.propBackgroundColor().addUntypedPropertyListener(styleChangedListener);
-        model_widget.propFont().addUntypedPropertyListener(styleChangedListener);
-        model_widget.propPlaceholder().addUntypedPropertyListener(styleChangedListener);
 
-        model_widget.runtimePropValue().addUntypedPropertyListener(contentChangedListener);
-        model_widget.propItemsFromPV().addUntypedPropertyListener(contentChangedListener);
-        model_widget.propItems().addUntypedPropertyListener(contentChangedListener);
-        model_widget.propEnabled().addUntypedPropertyListener(enableChangedListener);
-        model_widget.runtimePropPVWritable().addUntypedPropertyListener(enableChangedListener);
-        model_widget.propCustom().addUntypedPropertyListener(contentChangedListener);
+        Stream.of(
+            model_widget.propWidth(), model_widget.propHeight(),
+            model_widget.propForegroundColor(), model_widget.propBackgroundColor(),
+            model_widget.propFont(), model_widget.propPlaceholder(),
+            model_widget.runtimePropValue(), model_widget.propItemsFromPV(),
+            model_widget.propItems(), model_widget.propEnabled(),
+            model_widget.runtimePropPVWritable(), model_widget.propCustom()
+        ).forEach(prop -> prop.addUntypedPropertyListener(listener));
 
-        styleChanged(null, null, null);
-        contentChanged(null, null, null);
+        updateContent();
+        updateStyle();
+        updateEnable();
     }
 
     /**
@@ -456,18 +351,14 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
      */
     @Override
     protected void unregisterListeners() {
-        model_widget.propWidth().removePropertyListener(styleChangedListener);
-        model_widget.propHeight().removePropertyListener(styleChangedListener);
-        model_widget.propForegroundColor().removePropertyListener(styleChangedListener);
-        model_widget.propBackgroundColor().removePropertyListener(styleChangedListener);
-        model_widget.propFont().removePropertyListener(styleChangedListener);
-        model_widget.propPlaceholder().removePropertyListener(styleChangedListener);
-        model_widget.runtimePropValue().removePropertyListener(contentChangedListener);
-        model_widget.propItemsFromPV().removePropertyListener(contentChangedListener);
-        model_widget.propItems().removePropertyListener(contentChangedListener);
-        model_widget.propEnabled().removePropertyListener(enableChangedListener);
-        model_widget.runtimePropPVWritable().removePropertyListener(enableChangedListener);
-        model_widget.propCustom().removePropertyListener(contentChangedListener);
+        Stream.of(
+            model_widget.propWidth(), model_widget.propHeight(),
+            model_widget.propForegroundColor(), model_widget.propBackgroundColor(),
+            model_widget.propFont(), model_widget.propPlaceholder(),
+            model_widget.runtimePropValue(), model_widget.propItemsFromPV(),
+            model_widget.propItems(), model_widget.propEnabled(),
+            model_widget.runtimePropPVWritable(), model_widget.propCustom()
+        ).forEach(prop -> prop.removePropertyListener(listener));
 
         super.unregisterListeners();
     }
@@ -477,59 +368,35 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
      *
      * @param value Selected value by user.
      */
-    private void confirmValue(final String value) {
-        if (!model_widget.runtimePropPVWritable().getValue()) {
-            return;
-        }
+    private void confirmValue(String value) {
+        if (!model_widget.runtimePropPVWritable().getValue() || value == null) return;
 
         if (!model_widget.propCustom().getValue()) {
-            boolean isValidItem = items.stream()
-                .anyMatch(item -> {
-                    if (model_widget.propCaseSensitive().getValue()) {
-                        return item.equals(value);
-                    } else {
-                        return item.equalsIgnoreCase(value);
-                    }
-                });
-
-            if (!isValidItem) {
-                Platform.runLater(() -> jfx_node.setText(currentValue));
+            boolean valid = items.stream().anyMatch(item ->
+                model_widget.propCaseSensitive().getValue() ?
+                    item.equals(value) : item.equalsIgnoreCase(value));
+            if (!valid) {
+                jfx_node.setText(currentValue);
                 return;
             }
         }
 
         if (model_widget.propConfirmDialog().getValue()) {
-            final String message = model_widget.propConfirmMessage().getValue();
-            final String password = model_widget.propPassword().getValue();
+            String password = model_widget.propPassword().getValue();
+            String message = model_widget.propConfirmMessage().getValue();
+
             if (!password.isEmpty()) {
-                if (toolkit.showPasswordDialog(model_widget, message, password) == null) {
-                    return;
-                }
+                if (toolkit.showPasswordDialog(model_widget, message, password) == null) return;
             } else if (!toolkit.showConfirmationDialog(model_widget, message)) {
                 return;
             }
         }
 
         try {
-            final VType currentPvValue = model_widget.runtimePropValue().getValue();
-            Object mappedValue;
-
-            if (currentPvValue instanceof VEnum) {
-                mappedValue = FormatOptionHandler.parse(currentPvValue, value,
-                    FormatOption.DEFAULT);
-            } else {
-                try {
-                    if (value.contains(".")) {
-                        mappedValue = Double.parseDouble(value);
-                    } else {
-                        mappedValue = Integer.parseInt(value);
-                    }
-                } catch (NumberFormatException e) {
-                    // This will handle String PVs, which are expected to be most likely
-                    VType convertedValue = VType.toVType(value);
-                    mappedValue = (convertedValue != null) ? convertedValue : value;
-                }
-            }
+            VType currentPvValue = model_widget.runtimePropValue().getValue();
+            Object mappedValue = (currentPvValue instanceof VEnum) ?
+                FormatOptionHandler.parse(currentPvValue, value, FormatOption.DEFAULT) :
+                parseValue(value);
 
             toolkit.fireWrite(model_widget, mappedValue);
         } catch (Exception e) {
@@ -538,71 +405,114 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
     }
 
     /**
-     * Method called when a modification of autocomplete widget is listened.
+     * Parses a string value into an appropriate type (Integer or Double).
+     * If the value cannot be parsed, it returns the original string.
      *
-     * @param property Property of the widget to modify.
-     * @param old_value Old value of the property.
-     * @param new_value New value of the property.
+     * @param value String value to parse.
+     * @return Parsed value as Integer, Double, or original String if parsing fails.
      */
-    private void styleChanged(final WidgetProperty<?> property, final Object old_value, final Object new_value) {
-        dirty_style.mark();
+    private Object parseValue(String value) {
+        try {
+            return value.contains(".") ? Double.parseDouble(value) : Integer.parseInt(value);
+        } catch (NumberFormatException e) {
+            VType converted = VType.toVType(value);
+            return converted != null ? converted : value;
+        }
+    }
+
+    /**
+     * Handles property changes and marks the appropriate dirty flags.
+     *
+     * @param property The property that changed.
+     * @param old      The old value of the property.
+     * @param newVal   The new value of the property.
+     */
+    private void propertyChanged(WidgetProperty<?> property, Object old, Object newVal) {
+        if (property == model_widget.propEnabled() || property == model_widget.runtimePropPVWritable()) {
+            dirty_enable.mark();
+        } else if (property == model_widget.runtimePropValue() ||
+            property == model_widget.propItemsFromPV() ||
+            property == model_widget.propItems() ||
+            property == model_widget.propCustom()) {
+            dirty_content.mark();
+        } else {
+            dirty_style.mark();
+        }
         toolkit.scheduleUpdate(this);
     }
 
     /**
-     * Update enable status of the widget.
-     *
-     * @param property Enable property.
-     * @param old_value Old status.
-     * @param new_value New status.
+     * Update the enabled state of the TextField based on widget properties.
+     * If the widget is not enabled or the PV is not writable, the TextField will be disabled and non-editable.
      */
-    private void enableChanged(final WidgetProperty<?> property, final Object old_value,
-        final Object new_value) {
-        enabled = model_widget.propEnabled().getValue() &&
-            model_widget.runtimePropPVWritable().getValue();
-        dirty_enable.mark();
-        toolkit.scheduleUpdate(this);
+    private void updateEnable() {
+        boolean enabled = model_widget.propEnabled().getValue() && model_widget.runtimePropPVWritable().getValue();
+        Styles.update(jfx_node, Styles.NOT_ENABLED, !enabled);
+        jfx_node.setCursor(enabled ? Cursor.TEXT : Cursors.NO_WRITE);
+        jfx_node.setEditable(enabled);
+        jfx_node.setDisable(!enabled);
     }
 
     /**
      * Add a value to the list of suggestion items.
      *
-     * @param value Value to compute.
-     * @param fromPV Is value from the PV. True if it's from a PV, false otherwise.
      * @return List of computed items.
      */
-    private List<String> computeItems(final VType value, final boolean fromPV) {
-        if (fromPV && value instanceof VEnum) {
-            return ((VEnum) value).getDisplay().getChoices();
-        } else {
-            final String itemsString = model_widget.propItems().getValue();
-            if (itemsString == null || itemsString.trim().isEmpty()) {
-                return List.of();
-            }
+    private List<String> computeItems() {
+        VType value = model_widget.runtimePropValue().getValue();
 
-            return Arrays.stream(itemsString.split("\n"))
-                .map(String::trim)
-                .filter(item -> !item.isEmpty())
-                .collect(java.util.stream.Collectors.toList());
+        if (model_widget.propItemsFromPV().getValue() && value instanceof VEnum) {
+            return ((VEnum) value).getDisplay().getChoices();
+        }
+
+        String itemsString = model_widget.propItems().getValue();
+        if (itemsString == null || itemsString.trim().isEmpty()) {
+            return List.of();
+        }
+
+        return Arrays.stream(itemsString.split("\n"))
+            .map(String::trim)
+            .filter(item -> !item.isEmpty())
+            .toList();
+    }
+
+    /**
+     * Update the content of the TextField based on the widget properties.
+     * This includes updating the items list and the current value displayed in the TextField.
+     */
+    private void updateContent() {
+        items = computeItems();
+        currentValue = VTypeUtil.getValueString(model_widget.runtimePropValue().getValue(), false);
+
+        if (!toolkit.isEditMode()) {
+            jfx_node.textProperty().removeListener(textChangeListener);
+            model_widget.setItems(items);
+            if (!jfx_node.getText().equals(currentValue)) {
+                jfx_node.setText(currentValue);
+            }
+            jfx_node.textProperty().addListener(textChangeListener);
         }
     }
 
     /**
-     * Method called if an item is listened in items list.
-     *
-     * @param property Content property.
-     * @param old_value Old item value.
-     * @param new_value New item value.
+     * Update the style of the TextField based on widget properties.
+     * This includes setting the background color, text color, font, and placeholder text.
      */
-    private void contentChanged(final WidgetProperty<?> property, final Object old_value, final Object new_value) {
-        VType value = model_widget.runtimePropValue().getValue();
-        boolean fromPV = model_widget.propItemsFromPV().getValue() && value instanceof VEnum;
-        items = computeItems(value, fromPV);
+    private void updateStyle() {
+        jfx_node.resize(model_widget.propWidth().getValue(), model_widget.propHeight().getValue());
+        Font f = JFXUtil.convert(model_widget.propFont().getValue());
 
-        currentValue = VTypeUtil.getValueString(value, false);
+        jfx_node.setStyle(MessageFormat.format(
+            "-fx-background-color: {0}; -fx-text-fill: {1}; -fx-font: {2} {3}px \"{4}\"; " +
+                "-fx-border-color: derive({0}, -20%); -fx-border-width: 1px; " +
+                "-fx-border-radius: 3px; -fx-background-radius: 3px;",
+            JFXUtil.webRgbOrHex(model_widget.propBackgroundColor().getValue()),
+            JFXUtil.webRgbOrHex(model_widget.propForegroundColor().getValue()),
+            f.getStyle().toLowerCase().replace("regular", "normal"),
+            f.getSize(), f.getFamily()
+        ));
 
-        dirty_content.mark();
-        toolkit.scheduleUpdate(this);
+        jfx_node.setPromptText(model_widget.propPlaceholder().getValue());
     }
 
     /**
@@ -612,48 +522,9 @@ public class AutoCompleteRepresentation extends RegionBaseRepresentation<TextFie
     public void updateChanges() {
         super.updateChanges();
 
-        if (dirty_style.checkAndClear()) {
-            jfx_node.resize(model_widget.propWidth().getValue(),
-                model_widget.propHeight().getValue());
-
-            Font f = JFXUtil.convert(model_widget.propFont().getValue());
-
-            jfx_node.setStyle(MessageFormat.format(
-                "-fx-background-color: {0}; " +
-                    "-fx-text-fill: {1}; " +
-                    "-fx-font: {2} {3}px \"{4}\"; " +
-                    "-fx-border-color: derive({0}, -20%); " +
-                    "-fx-border-width: 1px; " +
-                    "-fx-border-radius: 3px; " +
-                    "-fx-background-radius: 3px;",
-                JFXUtil.webRgbOrHex(model_widget.propBackgroundColor().getValue()),
-                JFXUtil.webRgbOrHex(model_widget.propForegroundColor().getValue()),
-                f.getStyle().toLowerCase().replace("regular", "normal"),
-                f.getSize(),
-                f.getFamily()
-            ));
-
-            jfx_node.setPromptText(model_widget.propPlaceholder().getValue());
-        }
-
-        if (dirty_content.checkAndClear() && !toolkit.isEditMode()) {
-            active = true;
-            try {
-                model_widget.setItems(items);
-
-                if (!jfx_node.getText().equals(currentValue)) {
-                    jfx_node.setText(currentValue);
-                }
-            } finally {
-                active = false;
-            }
-        }
-
-        if (dirty_enable.checkAndClear() && !toolkit.isEditMode()) {
-            Styles.update(jfx_node, Styles.NOT_ENABLED, !enabled);
-            jfx_node.setCursor(enabled ? Cursor.TEXT : Cursors.NO_WRITE);
-            jfx_node.setEditable(enabled);
-        }
+        if (dirty_style.checkAndClear()) updateStyle();
+        if (dirty_content.checkAndClear()) updateContent();
+        if (dirty_enable.checkAndClear() && !toolkit.isEditMode()) updateEnable();
 
         jfx_node.layout();
     }
